# road_map_editor

./: .gitignore  CMakeLists.txt  README.md
cmake/: GenerateMetaInfo.cmake  GenerateQrc.cmake  GitInfo.cmake  PrintConfigurations.cmake  ReadVersion.cmake  Submodule.cmake  UpdateBuildTime.cmake  UpdateBuildTimeScript.cmake
src/: CMakeLists.txt  QgsRoadMapEditorPlugin.cpp  QgsRoadMapEditorPlugin.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp  main.cpp
src/res/: RoadMapEditor.qrc
